fix(angular-image): add margin top to remove overlapping trainer titles

--- a/_sass/components/angular-image.scss
+++ b/_sass/components/angular-image.scss
@@ -6,6 +6,7 @@
   position: relative;
   width: 200px;
   height: 200px;
+  margin-top: 0.5rem;
 
   &__badge {
     display: inline-block;
